--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,9 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: Issue-to-PR
+description: 'Convert an issue to a pull request for a file containing the issue text.'
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
-    required: true
-    default: '1000'
+
 outputs:
-  time: # output will be available to future steps 
-    description: 'The message to output'
+
 runs:
   using: 'node12'
   main: 'dist/index.js'
