--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,12 @@ inputs:
     step: # id of input
         description: 'grant workflow step issue2project, issue2pr, or pr2project'
         required: true
+    projectURL:
+        description: 'URL of grant applications repo'
+        required: false
+    columnName:
+        description: 'Project column to move card to'
+        required: false
 
 runs:
   using: 'node12'
