--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 name: grant-actions
 description: 'TODO'
 inputs:
+    myToken:
+        description: 'github secrets token for octokit authentication'
+        required: true
     step: # id of input
         description: 'grant workflow step issue2project, issue2pr, or pr2project'
         required: true
