Fix description of pr2project card step

--- a/.github/workflows/grant-actions.yml
+++ b/.github/workflows/grant-actions.yml
@@ -25,7 +25,7 @@ jobs:
             step: 'issue2pr'
 #        - name: move-card-for-pr-to-review-column
 #          uses: ./
-#          if: github.event_name == 'issues' && github.event.action == 'labeled' && issue.event.label == 'Review'
+#          if: github.event_name == 'pull_request' && github.event.action == 'opened'
 #            myToken: ${{ secrets.GITHUB_TOKEN }}
 #            step: 'pr2project'
 #            projectURL: 'https://github.com/nostarch-foundation/grant-actions/projects/1'
