--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
         description: 'github secrets token for octokit authentication'
         required: true
     step: # id of input
-        description: 'grant workflow step issue2project, issue2pr, or pr2project'
+        description: 'grant workflow step issue2project, issue2pr, or movePRcard'
         required: true
     projectURL:
         description: 'URL of grant applications repo'
