some shots in the dark

--- a/.github/workflows/grant-actions.yml
+++ b/.github/workflows/grant-actions.yml
@@ -19,7 +19,7 @@ jobs:
  #           projectURL: 'https://github.com/nostarch-foundation/grant-actions/projects/1'
  #           columnName: 'Applications'
         - name: convert-issue-to-pr
-          uses: actions/checkout@v1
+          uses: actions/grant-actions@master
           if: github.event_name == 'issues' && github.event.action == 'labeled' && github.event.label.name == 'Review'
           with:
             myToken: ${{ secrets.GITHUB_TOKEN }}
