--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,13 @@ jobs:
     - uses: actions/checkout@v1
     - run: npm ci
     - run: npm test
+
+  # test action works running from the graph  
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: ./
+    with:
+        step: 'issue2pr'
+        myToken: $ {{ secrets.GITHUB_TOKEN }}
