--- a/.github/workflows/grant-actions.yml
+++ b/.github/workflows/grant-actions.yml
@@ -11,8 +11,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: convert-issue-to-pr
-            - uses: actions/checkout@v1
-            - uses: ./
+              uses: actions/checkout@v1
+              uses: ./
               if: github.event_name == 'issues' && github.event.action == 'labeled' && github.event.label.name == 'Review'
               with:
                 myToken: ${{ secrets.GITHUB_TOKEN }}
