fix column name input

--- a/.github/workflows/grant-actions.yml
+++ b/.github/workflows/grant-actions.yml
@@ -17,7 +17,7 @@ jobs:
                 step: 'card-for-request'
                 projectURL: 'https://github.com/nostarch-foundation/grant-actions/projects/1'
                 requestColumn: 'Applications'
-                reviewColumn: 'Review'
+                reviewColumn: 'To Review'
             - name: move-request-to-review
               uses: ./
               if: github.event_name == 'issues' && github.event.action == 'labeled' && github.event.label.name == 'Review'
@@ -26,7 +26,7 @@ jobs:
                 step: 'request-to-review'
                 projectURL: 'https://github.com/nostarch-foundation/grant-actions/projects/1'
                 requestColumn: 'Applications'
-                reviewColumn: 'Review'
+                reviewColumn: 'To Review'
 
 #        - name: move-issue-card-to-review-column
 #          uses: ./
